--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div id="conatiner">
+  <div id="container">
     <div id="root">
 
       <div>
-        <div></div>
-        <div></div>
+        <div>
+          <div></div>
+        </div>
+
+        <div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
       </div>
 
 
@@ -20,7 +30,7 @@
         <div></div>
         <div></div>
       </div>
-      
+
       <div></div>
       
     </div>
