--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
 
       <div>
         <div></div>
-        <div></div>
+        <div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
 
-      <div></div>
+      <div>
+        <div></div>
+      </div>
       
     </div>
   </div>
